# Mystic-xorstr

./: .gitignore  LICENSE  README.md
include/mystic/: mystic.hh
tests/: CMakeLists.txt  example.cpp
